Bug 582346 - Changed ContextButton commands to be valid
Change-Id: Ia95897ccc0440311c21329c78ddcf904428b2398
Signed-off-by: Sebastian Hollersbacher <s.hollersbacher@outlook.at>